# Morganite

./: .gitignore  Cargo.toml
src/: main.rs  tts.rs  utils.rs  writer.rs
