[package]
name = "Morganite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
kokoro-tts = { version = "0.3", path = "../kokoro" }
tracing-subscriber = "0.3"
tracing = "0.1"
tracing-unwrap = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing-appender = "0.2.4"
chrono = "0.4.43"
hound = "3.5.1"
anyhow = "1.0.100"
tracing-indicatif = "0.3.14"
futures-util = "0.3.31"
shine-rs = "0.1.3"
